Updated models in order to make them 1) comparable and 2) implement toString. Created a ProductService class which also extends GenericService class in order to add one more method (getMostRecentTen()) to the product service. Updated category, product, and user service implementations so that they prevent from sending to repository and db duplicate objects (objects that are already present in db). Moved RestControllers to folder rest_controllers and created another folder for Thymeleaf controllers (Controllers). Added Thymeleaf controllers - HomeThymeleafController and ProductThymeleafController. Added css, image, and js files in static resources folder and html files in both static and templates resources folders. Updated ProductControllerTests due to change in ProductService and its implementation class.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -32,7 +32,7 @@ h2 > a:hover {
     color: red;
 }
 
-#bootstrap-override h1.navbar-brand {
+#bootstrap-override h1.navbar-brand a {
     color: green;
 }
 
@@ -81,7 +81,7 @@ h4 {
     border: 1px solid gray;
 }
 
-/* Brand logos */
+/* Brand brand_logos */
 div.col-sm {
     text-align: center;
 }
